--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
       </style>
-    <title>Notes App</title>
+    <title>mernotes</title>
     <link rel="stylesheet" href="index.css">
   </head>
   <body>
